--- a/app/website/package.json
+++ b/app/website/package.json
@@ -3,7 +3,7 @@
 	"module": "src/index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "bun src/index.js",
+		"dev": "bun -b src/index.js",
 		"fmt": "biome format --write",
 		"lint": "biome lint --write"
 	}
